Fixed developers not being able to access the site in maintenance mode. Added new alert flags in the admin and front end bar when maintenance or developer mode is enabled. Fixed nav being covered in example site when bigtree bar is open.

--- a/core/example-site/site/css/master.css
+++ b/core/example-site/site/css/master.css
@@ -119,6 +119,7 @@
 	/* !Shifter Plugin Overrides */
 	.shifter .shifter-page { box-shadow: none; }
 	.shifter .shifter-navigation { background: $lighterGray; padding: 35px 40px; }
+	.bigtree_bar_open .shifter-navigation { padding-top: 75px; }
 	
 	/* !Navigation */
 	.navigation a { color: $darkGray; display: block; font-size: 18px; margin: 0 0 8px; }
